build: update pom.xml and Dockerfiles to use Eclipse Temurin JRE 21 and streamline jar handling