@@ -1,5 +1,6 @@
-FakeSMTP
-========
+# FakeSMTP (jgisson fork)
+
+Fork: build and run with latest Java LTS (21)
 
 FakeSMTP is a Free Fake SMTP Server with GUI for testing emails in applications easily.
 It is written in Java.
@@ -16,18 +17,14 @@ source code is provided.
 
 It is licensed under the very free BSD or GPL license, whichever you prefer.
 
+## Requirements
 
-Requirements
-------------
-
-You need Java JVM 1.6 or newer installed on your machine.
+You need Java ~~JVM 1.6~~ JVM 21 or newer installed on your machine.
 
 If you are on a "Unix-like" machine (Mac, GNU/Linux, BSD...), you may have
 to be "root" to start the port `25`, otherwise, try another port >= `1024`.
 
-
-Usage
------
+## Usage
 
 The fakeSMTP.jar is auto-executable.
 If your desktop environment supports it, you can directly double click
@@ -35,6 +32,10 @@ on the .jar file.
 Otherwise, run the following command:
 
     java -jar fakeSMTP-VERSION.jar
+
+For Mac OS:
+
+    java --add-exports java.desktop/com.apple.eawt=ALL-UNNAMED -jar target/fakeSMTP-VERSION.jar
 
 If you want to specify the directory where emails will be saved when starting the application, you can use the `-o` argument:
 
@@ -59,31 +60,25 @@ To see all the available options (relay domains, custom eml-viewer...):
 
     java -jar fakeSMTP-VERSION.jar --help
 
-
-Alternatives
-------------
+## Alternatives
 
 FakeSMTP was created because we couldn't find any free (as in freedom) and
 cross-platform SMTP server with GUI for testing emails in applications or websites.
 Listed below are some greats alternatives to Fake SMTP:
 
-
 **[SMTP4dev](http://smtp4dev.codeplex.com/)**
 
-* Nice features;
-* Open source;
-* Windows only (written in .Net).
-
+- Nice features;
+- Open source;
+- Windows only (written in .Net).
 
 **[DevNull SMTP](http://www.aboutmyip.com/AboutMyXApp/DevNullSmtp.jsp)**
 
-* Lightweight;
-* Closed source;
-* Cross-Platform (written in Java 1.4).
+- Lightweight;
+- Closed source;
+- Cross-Platform (written in Java 1.4).
 
-
-Building it
------------
+## Building it
 
 You need to download and setup Maven.
 Once installed, go to project directory and run the following command:
@@ -96,9 +91,7 @@ We recommend you not to skip unit tests.
 
 Once you know how to configure unit tests for this project, stop skipping them.
 
-
-Running integration tests
--------------------------
+## Running integration tests
 
 To run integration tests, you will first need to launch the application
 and start the server on port `2525`.
@@ -109,34 +102,22 @@ You can then run the following command:
 
     mvn integration-test
 
-
-Change the default port for unit/integration tests
---------------------------------------------------
+## Change the default port for unit/integration tests
 
 You need to modify the following file:
 `src/test/java/com/nilhcem/fakesmtp/core/test/TestConfig.java`.
 
 Please note that it is better to have two different ports for unit and integrations tests, to avoid any port binding exception while running Maven's `integration-test` goal.
 
+## Usage on Docker
 
-Usage on Docker
----------------
+- Build from source
 
-* Run distributed version: [Dockerfile](https://github.com/Nilhcem/FakeSMTP/blob/master/Dockerfile)
+Build the docker image after Maven build
 
-      `docker build -t="mail" github.com/Nilhcem/FakeSMTP`
+    docker buildx build -t fakesmtp .
 
-      `docker run -ti -p 250:25 --privileged=true -v /mail:/output mail`
-
-
-* Build from source
-
-Get sources from GitHub: [Dockerfile](https://github.com/Nilhcem/FakeSMTP/blob/master/src/main/docker/Dockerfile)
-
-    git clone https://github.com/Nilhcem/FakeSMTP
-    cd FakeSMTP
-
-Build the docker image
+Build the docker image (Maven)
 
     mvn package docker:build -DskipTests
 
@@ -146,23 +127,21 @@ Run the docker image
 
 Configure container
 
-* Map the SMTP port 25 to host:
+- Map the SMTP port 25 to host:
 
-    `-p 250:25`
+  `-p 2525:25`
 
-* Map volume for received mails:
+- Map volume for received mails:
 
-    `--privileged=true  -v /mail-data:/output`
+  `--privileged=true  -v /home/fakesmtp/mail:/output`
 
 Full command
 
-* Foward fakesmtp:25 to host port 250,
-* mount host folder /home/fakesmtp/mail as container folder /output
+- Foward fakesmtp:25 to host port 2525,
+- mount host folder user home ~/temp/fakesmtp/mail as container folder /output
 
-    `docker run -ti -d -p 250:25 --privileged=true -v /home/fakesmtp/mail:/output fakesmtp`
+  `docker run -ti -d -p 2525:25 --privileged=true -v ~/temp/fakesmtp/mail:/output fakesmtp`
 
-
-Contact me
-----------
+## Contact me
 
 Use my github's nickname (at) gmail (dot) com
